# emr-provider-lookup

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
docs/database/: README.md  provider-lookup-erd.dbml  provider-lookup-mermaid.md  schema.sql
docs/project/: project-understanding.md
docs/setup/: development-environment.md  github-workflow.md  server-tools.md
provider_lookup/: asgi.py  settings.py  urls.py  wsgi.py
providers/: admin.py  models.py  tests.py  urls.py  views.py
providers/management/commands/: import_nppes_providers.py  import_taxonomy_codes.py  seed_sample_data.py
providers/migrations/: 0001_initial.py
static/css/: styles.css
templates/providers/: home.html  provider_detail.html
