[project]
name = "emr-provider-lookup"
version = "0.1.0"
description = "Healthcare provider lookup application for the EMRTS internship project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-dotenv>=1.0,<2.0"
]

[tool.uv]
package = false
